@@ -21,6 +21,8 @@
 __author__  = 'Christian Heimes <tiran@cheimes.de>'
 __docformat__ = 'restructuredtext'
 
+from zope.interface import implements
+
 from ExtensionClass import Base
 from Globals import InitializeClass
 from Products.CMFCore.permissions import View
@@ -30,13 +32,16 @@ from AccessControl import ClassSecurityInfo
 _marker = object()
 from Products.Archetypes.OrderedBaseFolder import OrderedBaseFolder
 from Products.Archetypes.OrderedBaseFolder import OrderedContainer
-from Products.ATContentTypes.interfaces import IAutoSortSupport
-from Products.ATContentTypes.interfaces import IAutoOrderSupport
-# implementation
+from Products.ATContentTypes.interfaces import IAutoSortSupport as z2IAutoSortSupport
+from Products.ATContentTypes.interfaces import IAutoOrderSupport as z2IAutoOrderSupport
+from Products.ATContentTypes.interface import IAutoSortSupport
+from Products.ATContentTypes.interface import IAutoOrderSupport
+
 
 class AutoSortSupport(Base):
 
-    __implements__ = (IAutoSortSupport, )
+    __implements__ = (z2IAutoSortSupport, )
+    implements(IAutoSortSupport)
 
     security = ClassSecurityInfo()
 
@@ -100,7 +105,8 @@ InitializeClass(AutoSortSupport)
 
 class AutoOrderSupport(AutoSortSupport, OrderedContainer):
 
-    __implements__ = (IAutoOrderSupport, )
+    __implements__ = (z2IAutoOrderSupport, )
+    implements(IAutoOrderSupport)
 
     security = ClassSecurityInfo()
 
