@@ -23,6 +23,7 @@ __author__  = 'Christian Heimes <tiran@cheimes.de>'
 __docformat__ = 'restructuredtext'
 
 from cStringIO import StringIO
+from zope.interface import implements
 
 from DateTime import DateTime
 from Globals import InitializeClass
@@ -30,7 +31,8 @@ from Globals import InitializeClass
 from Products.CMFCore.permissions import View
 from AccessControl import ClassSecurityInfo
 
-from Products.ATContentTypes.interfaces import ICalendarSupport
+from Products.ATContentTypes.interfaces import ICalendarSupport as z2ICalendarSupport
+from Products.ATContentTypes.interface import ICalendarSupport
 
 PRODID = "-//AT Content Types//AT Event//EN"
 
@@ -106,7 +108,8 @@ class CalendarSupportMixin:
     """Mixin class for iCal/vCal support
     """
 
-    __implements__ = (ICalendarSupport, )
+    __implements__ = (z2ICalendarSupport, )
+    implements(ICalendarSupport)
 
     security       = ClassSecurityInfo()
 
