@@ -25,6 +25,8 @@ __docformat__ = 'restructuredtext'
 
 import difflib
 
+from zope.interface import implements
+
 from DocumentTemplate.DT_Util import html_quote
 from Globals import InitializeClass
 
@@ -34,7 +36,8 @@ from AccessControl import ClassSecurityInfo
 
 from Products.Archetypes.atapi import ATHistoryAwareMixin
 from Products.ATContentTypes import permission as ATCTPermissions
-from Products.ATContentTypes.interfaces import IHistoryAware
+from Products.ATContentTypes.interfaces import IHistoryAware as z2IHistoryAware
+from Products.ATContentTypes.interface import IHistoryAware
 
 class HistoryAwareMixin(ATHistoryAwareMixin):
     """History aware mixin class
@@ -48,7 +51,8 @@ class HistoryAwareMixin(ATHistoryAwareMixin):
     managers.
     """
 
-    __implements__ = (IHistoryAware ,)
+    __implements__ = (z2IHistoryAware ,)
+    implements(IHistoryAware)
 
     security       = ClassSecurityInfo()
 
