@@ -1,3 +1,5 @@
+from zope.interface import implements
+
 from Globals import InitializeClass
 from Products.CMFCore.utils import getToolByName
 from Products.ATContentTypes.criteria import _criterionRegistry
@@ -7,7 +9,8 @@ from OFS.SimpleItem import SimpleItem
 from ExtensionClass import Base
 
 from Products.ATContentTypes.config import TOOLNAME
-from Products.ATContentTypes.interfaces import IATCTTopicsTool
+from Products.ATContentTypes.interface import IATCTTopicsTool
+from Products.ATContentTypes.interfaces import IATCTTopicsTool as z2IATCTTopicsTool
 from Products.Archetypes.atapi import DisplayList
 from Products.CMFCore.permissions import ManagePortal
 from Products.CMFPlone.CatalogTool import CatalogTool
@@ -27,7 +30,8 @@ class ATTopicsTool(Base):
        inside topics and allows you to enter a friendly name instead of
        cryptic indexes.
     """
-    __implements__ = (IATCTTopicsTool,)
+    __implements__ = (z2IATCTTopicsTool,)
+    implements(IATCTTopicsTool)
 
     security       = ClassSecurityInfo()
 
